ProFit/objects/Error_Log__c.object
<CustomObject>
    <description>Stores all of the error in the Application.</description>
    <fields>
        <fullName>Log_Date_Time__c</fullName>
        <description>Date and time when the error occured.</description>
        <inlineHelpText>Input the date and time when the error occured.</inlineHelpText>
        <label>Log Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Details__c</fullName>
        <description>Detail of the error.</description>
        <inlineHelpText>Explain the details of the error.</inlineHelpText>
        <label>Log Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Number__c</fullName>
        <description>Error auto number.</description>
        <displayFormat>Error-{0000000}</displayFormat>
        <inlineHelpText>Error number.</inlineHelpText>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <description>The name of either Apex Class or Apex Trigger error.</description>
        <inlineHelpText>Name of the Apex Class or Trigger that has error.</inlineHelpText>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>